--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -693,6 +693,7 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
+# CONFIG_FRAME_POINTER is not set
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
