whyred-perf_defconfig: enable sound defs for dts
Signed-off-by: srfarias <erikofarias@gmail.com>

--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -482,6 +482,8 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8998=y
 CONFIG_SND_SOC_660=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_SND_HWDEP=y
+CONFIG_MSM_QDSP6_APRV2_GLINK=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_DRAGONRISE=y
